--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^5.0.0"
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
+    "cookie-session": "^1.3.3",
+    "express": "^4.17.1"
   }
 }
